--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <!-- Include the latest version of WebTorrent -->
+  <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js">
+
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
   <style>
     fieldset {
@@ -21,7 +24,7 @@
 
   <div class="header-container">
     <header class="wrapper clearfix">
-      <h1 class="title">Transmux Analyzer</h1>
+      <h1 class="title">Live Streaming using P2P</h1>
     </header>
   </div>
 
@@ -33,21 +36,17 @@
           <p>
         </header>
         <section>
-          <h2>Inputs</h2>
+          <h2>Entrada</h2>
           <form id="inputs">
-            <legend>
-              The input with the checked radio box will be loaded into
-              the player on this page.
-            </legend>
             <fieldset>
               <legend>M2TS Input</legend>
               <div>
-                <input id="original-active" type=radio name=active checked value="original">
                 <label>
-                  Your original .TS or .AAC segment:
-                  <input type="file" id="original">
+                  Your .torrent link of .TS or AAC Segment
+                  <input type="text" id="torrentLink" placeholder="Torrent link">
+                  <button type="button" id="Stream">Stream</button>
+                  <!--<input type="file" id="original">-->
                 </label>
-                <button id="save-muxed" type="button">Save Transmuxer Output</button>
               </div>
               <div>
                 <label><input id="combined-output" type=checkbox name=combined checked value="combined">&nbsp;Remux output into a single output?
@@ -65,15 +64,6 @@
                 </label>
               </div>
             </fieldset>
-            <fieldset>
-              <legend>MP4 Input</legend>
-              <input id="working-active" type=radio name=active value="working">
-              <label>
-                A working, MP4 version of the underlying stream
-                produced by another tool:
-                <input type="file" id="working">
-              </label>
-            </fieldset>
             <div>
               <label>
                 Codecs:
@@ -84,26 +74,6 @@
         </section>
         <section id="video-place">
         </section>
-        <section>
-          <h2>Comparison</h2>
-          <div id="comparison">
-            A diff of the structure of the two MP4s will appear here
-            once you've specified an input TS file and a known working
-            MP4.
-          </div>
-        </section>
-        <section>
-          <h2>Structure</h2>
-          <div class="result-wrapper">
-            <h3>videojs-contrib-hls</h3>
-            <pre class="vjs-boxes">
-            </pre>
-          </div>
-          <div class="result-wrapper">
-            <h3>Working</h3>
-            <pre class="working-boxes"></pre>
-          </div>
-        </section>
       </article>
 
     </div> <!-- #main -->
@@ -111,41 +81,23 @@
 
   <div class="footer-container">
     <footer class="wrapper">
-      <h3>footer</h3>
+      <h3>Make with &hearts; and WebTorrent by <a href="https://github.com/JairFrancesco">Jair Francesco</a></h3>
     </footer>
   </div>
 
 
-  <script src="../mux.js"></script>
-
-  <!-- Include QUnit for object diffs -->
-  <!--<script src="../node_modules/qunitjs/qunit/qunit.js"></script>-->
-  <script>
-      /*! @source http://purl.eligrey.com/github/FileSaver.js/blob/master/FileSaver.js */
-    window.saveAs=function(view){"use strict";if(typeof navigator!=="undefined"&&/MSIE [1-9]\./.test(navigator.userAgent)){return}var doc=view.document,get_URL=function(){return view.URL||view.webkitURL||view},save_link=doc.createElementNS("http://www.w3.org/1999/xhtml","a"),can_use_save_link="download"in save_link,click=function(node){var event=new MouseEvent("click");node.dispatchEvent(event)},is_safari=/Version\/[\d\.]+.*Safari/.test(navigator.userAgent),webkit_req_fs=view.webkitRequestFileSystem,req_fs=view.requestFileSystem||webkit_req_fs||view.mozRequestFileSystem,throw_outside=function(ex){(view.setImmediate||view.setTimeout)(function(){throw ex},0)},force_saveable_type="application/octet-stream",fs_min_size=0,arbitrary_revoke_timeout=500,revoke=function(file){var revoker=function(){if(typeof file==="string"){get_URL().revokeObjectURL(file)}else{file.remove()}};if(view.chrome){revoker()}else{setTimeout(revoker,arbitrary_revoke_timeout)}},dispatch=function(filesaver,event_types,event){event_types=[].concat(event_types);var i=event_types.length;while(i--){var listener=filesaver["on"+event_types[i]];if(typeof listener==="function"){try{listener.call(filesaver,event||filesaver)}catch(ex){throw_outside(ex)}}}},auto_bom=function(blob){if(/^\s*(?:text\/\S*|application\/xml|\S*\/\S*\+xml)\s*;.*charset\s*=\s*utf-8/i.test(blob.type)){return new Blob(["\ufeff",blob],{type:blob.type})}return blob},FileSaver=function(blob,name,no_auto_bom){if(!no_auto_bom){blob=auto_bom(blob)}var filesaver=this,type=blob.type,blob_changed=false,object_url,target_view,dispatch_all=function(){dispatch(filesaver,"writestart progress write writeend".split(" "))},fs_error=function(){if(target_view&&is_safari&&typeof FileReader!=="undefined"){var reader=new FileReader;reader.onloadend=function(){var base64Data=reader.result;target_view.location.href="data:attachment/file"+base64Data.slice(base64Data.search(/[,;]/));filesaver.readyState=filesaver.DONE;dispatch_all()};reader.readAsDataURL(blob);filesaver.readyState=filesaver.INIT;return}if(blob_changed||!object_url){object_url=get_URL().createObjectURL(blob)}if(target_view){target_view.location.href=object_url}else{var new_tab=view.open(object_url,"_blank");if(new_tab==undefined&&is_safari){view.location.href=object_url}}filesaver.readyState=filesaver.DONE;dispatch_all();revoke(object_url)},abortable=function(func){return function(){if(filesaver.readyState!==filesaver.DONE){return func.apply(this,arguments)}}},create_if_not_found={create:true,exclusive:false},slice;filesaver.readyState=filesaver.INIT;if(!name){name="download"}if(can_use_save_link){object_url=get_URL().createObjectURL(blob);setTimeout(function(){save_link.href=object_url;save_link.download=name;click(save_link);dispatch_all();revoke(object_url);filesaver.readyState=filesaver.DONE});return}if(view.chrome&&type&&type!==force_saveable_type){slice=blob.slice||blob.webkitSlice;blob=slice.call(blob,0,blob.size,force_saveable_type);blob_changed=true}if(webkit_req_fs&&name!=="download"){name+=".download"}if(type===force_saveable_type||webkit_req_fs){target_view=view}if(!req_fs){fs_error();return}fs_min_size+=blob.size;req_fs(view.TEMPORARY,fs_min_size,abortable(function(fs){fs.root.getDirectory("saved",create_if_not_found,abortable(function(dir){var save=function(){dir.getFile(name,create_if_not_found,abortable(function(file){file.createWriter(abortable(function(writer){writer.onwriteend=function(event){target_view.location.href=file.toURL();filesaver.readyState=filesaver.DONE;dispatch(filesaver,"writeend",event);revoke(file)};writer.onerror=function(){var error=writer.error;if(error.code!==error.ABORT_ERR){fs_error()}};"writestart progress write abort".split(" ").forEach(function(event){writer["on"+event]=filesaver["on"+event]});writer.write(blob);filesaver.abort=function(){writer.abort();filesaver.readyState=filesaver.DONE};filesaver.readyState=filesaver.WRITING}),fs_error)}),fs_error)};dir.getFile(name,{create:false},abortable(function(file){file.remove();save()}),abortable(function(ex){if(ex.code===ex.NOT_FOUND_ERR){save()}else{fs_error()}}))}),fs_error)}),fs_error)},FS_proto=FileSaver.prototype,saveAs=function(blob,name,no_auto_bom){return new FileSaver(blob,name,no_auto_bom)};if(typeof navigator!=="undefined"&&navigator.msSaveOrOpenBlob){return function(blob,name,no_auto_bom){if(!no_auto_bom){blob=auto_bom(blob)}return navigator.msSaveOrOpenBlob(blob,name||"download")}}FS_proto.abort=function(){var filesaver=this;filesaver.readyState=filesaver.DONE;dispatch(filesaver,"abort")};FS_proto.readyState=FS_proto.INIT=0;FS_proto.WRITING=1;FS_proto.DONE=2;FS_proto.error=FS_proto.onwritestart=FS_proto.onprogress=FS_proto.onwrite=FS_proto.onabort=FS_proto.onerror=FS_proto.onwriteend=null;return saveAs}(typeof self!=="undefined"&&self||typeof window!=="undefined"&&window||this.content);if(typeof module!=="undefined"&&module.exports){module.exports.saveAs=saveAs}else if(typeof define!=="undefined"&&define!==null&&define.amd!=null){define([],function(){return saveAs})}
-  </script>
+  <script src="js/mux.js"></script>
   <script>
     'use strict';
     var
       $ = document.querySelector.bind(document),
       inputs = $('#inputs'),
-      original = $('#original'),
-      working = $('#working'),
-      saveButton = $('#save-muxed'),
-
+      streamButton = $('#Stream'),
+      torrentLink = $('#torrentLink'),
       vjsParsed,
-      workingParsed,
-      diffParsed,
       vjsBytes,
-      workingBytes,
       saveConfig,
       restoreConfig,
-      saveTA,
-
-      vjsBoxes = $('.vjs-boxes'),
-      workingBoxes = $('.working-boxes'),
-      workingBoxes = $('.working-boxes'),
-
       muxedData,
       muxedName,
       transmuxer,
@@ -157,8 +109,6 @@
     logevent = function(event) {
       console.log(event.type);
     };
-
-    saveTA = function(tarr, n) { var b = new Blob([tarr], {type: 'application/octet-binary'}); return window.saveAs(b, n);}
 
     saveConfig = function () {
       var inputs = [].slice.call(document.querySelectorAll('input:not([type=file])'));
@@ -188,28 +138,6 @@
       });
     };
     document.addEventListener('DOMContentLoaded', restoreConfig);
-
-    // output a diff of the two parsed MP4s
-    diffParsed = function() {
-      var comparison, diff, transmuxed;
-      if (!vjsParsed || !workingParsed) {
-        // wait until both inputs have been provided
-        return;
-      }
-      comparison = $('#comparison');
-      transmuxed = vjsParsed;
-      diff = '<p>A <del>red background</del> indicates ' +
-        'properties present in the transmuxed file but missing from the ' +
-        'working version. A <ins>green background</ins> indicates ' +
-        'properties present in the working version but missing in the ' +
-        'transmuxed output.</p>';
-      diff += '<pre class="mp4-diff">' +
-        QUnit.diff(muxjs.mp4.tools.textify(transmuxed, null, ' '),
-                   muxjs.mp4.tools.textify(workingParsed, null, ' ')) +
-        '</pre>';
-
-      comparison.innerHTML = diff;
-    };
 
     prepareSourceBuffer = function(combined, outputType, callback) {
       var
@@ -269,13 +197,89 @@
       });
     };
 
-    original.addEventListener('change', function() {
-      var reader = new FileReader();
+    
 
-      // do nothing if no file was chosen
-      if (!this.files[0]) {
+
+    streamButton.addEventListener('click', function(){
+
+      var torrentId = torrentLink.value;      
+      if (torrentId=="")
+      {
         return;
       }
+
+      var client = new WebTorrent();
+      client.add(torrentId, function (torrent) {
+        var file = torrent.files[0]
+        file.getBuffer(function(err, buffer){
+          if (err) throw err;
+          console.log(buffer);
+          //cb(new Uint8Array(buffer)); //callback;
+          var segment = new Uint8Array(buffer),
+              combined = document.querySelector('#combined-output').checked,
+              outputType = document.querySelector('input[name="output"]:checked').value,
+              resetTransmuxer = $('#reset-tranmsuxer').checked,
+              remuxedSegments = [],
+              remuxedInitSegment = null,
+              remuxedBytesLength = 0,
+              createInitSegment = false,
+              bytes,
+              i, j;
+          if (resetTransmuxer || !transmuxer) {
+            createInitSegment = true;
+            if (combined) {
+                outputType = 'combined';
+                transmuxer = new muxjs.mp4.Transmuxer();
+            } else {
+                transmuxer = new muxjs.mp4.Transmuxer({remux: false});
+            }
+
+            transmuxer.on('data', function(event) {
+              if (event.type === outputType) {
+                remuxedSegments.push(event);
+                remuxedBytesLength += event.data.byteLength;
+                remuxedInitSegment = event.initSegment;
+              }
+            });
+
+            transmuxer.on('done', function () {
+              var offset = 0;
+              if (createInitSegment) {
+                bytes = new Uint8Array(remuxedInitSegment.byteLength + remuxedBytesLength)
+                bytes.set(remuxedInitSegment, offset);
+                offset += remuxedInitSegment.byteLength;
+                createInitSegment = false;
+              } else {
+                bytes = new Uint8Array(remuxedBytesLength);
+              }
+
+              for (j = 0, i = offset; j < remuxedSegments.length; j++) {
+                bytes.set(remuxedSegments[j].data, i);
+                i += remuxedSegments[j].byteLength;
+              }
+              muxedData = bytes;
+              remuxedSegments = [];
+              remuxedBytesLength = 0;
+
+              vjsBytes = bytes;
+              vjsParsed = muxjs.mp4.tools.inspect(bytes);
+              console.log('transmuxed', vjsParsed);
+
+              prepareSourceBuffer(combined, outputType, function () {
+                console.log('appending...');
+                window.vjsBuffer.appendBuffer(bytes);
+                video.play();
+              });
+            });
+          }
+          transmuxer.push(segment);
+          transmuxer.flush();
+        });
+      });
+    });
+
+
+    torrentLink.addEventListener('change', function() {
 
       reader.addEventListener('loadend', function() {
 
@@ -329,18 +333,12 @@
             vjsBytes = bytes;
             vjsParsed = muxjs.mp4.tools.inspect(bytes);
             console.log('transmuxed', vjsParsed);
-            diffParsed();
 
-            // clear old box info
-            vjsBoxes.innerHTML = muxjs.mp4.tools.textify(vjsParsed, null, ' ');
-
-            if ($('#original-active').checked) {
-              prepareSourceBuffer(combined, outputType, function () {
-                console.log('appending...');
-                window.vjsBuffer.appendBuffer(bytes);
-                video.play();
-              });
-            }
+            prepareSourceBuffer(combined, outputType, function () {
+              console.log('appending...');
+              window.vjsBuffer.appendBuffer(bytes);
+              video.play();
+            });
           });
         }
 
@@ -352,36 +350,6 @@
       reader.readAsArrayBuffer(this.files[0]);
     }, false);
 
-    working.addEventListener('change', function() {
-      var reader = new FileReader();
-
-      reader.addEventListener('loadend', function() {
-        var bytes = new Uint8Array(reader.result);
-
-        if ($('#working-active').checked) {
-          prepareSourceBuffer(function() {
-            window.vjsBuffer.appendBuffer(bytes);
-            video.play();
-          });
-        }
-
-        workingBytes = bytes;
-        workingParsed = muxjs.mp4.tools.inspect(bytes);
-        console.log('working', workingParsed);
-        diffParsed();
-
-        // clear old box info
-        workingBoxes.innerHTML = muxjs.mp4.tools.textify(workingParsed, null, ' ');
-      });
-      reader.readAsArrayBuffer(this.files[0]);
-    }, false);
-
-
-    $('#save-muxed').addEventListener('click', function () {
-      if (muxedData && muxedName) {
-        return saveTA(muxedData, muxedName);
-      }
-    });
 
     $('#combined-output').addEventListener('change', function () {
         Array.prototype.slice.call(document.querySelectorAll('[name="output"'))
