--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           transmuxer.push(segment);
           transmuxer.flush();
         });
-        muxedName = this.files[0].name.replace('.ts', '.f4m');
+        //muxedName = this.files[0].name.replace('.ts', '.f4m');
       });
     });
 
